replacing icon with svg file

--- a/logowanie2/index.html
+++ b/logowanie2/index.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/e6ef101a84.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
 <body>
     <div id="container">
-        <img src="chmurcia.png" alt="Chmurka">
+        <img src="chmurcia.png" alt="Chmurka - pies" class="pies center">
         <h1 style="display: none;">DLACZEGO WILK TAK WYJE W KSIEZYCOWA NOC</h1>
         <h1>Zalogowano pomyślnie!</h1>
-        <i class="fas fa-cloud fa-4x"></i>
+        <img src="cloud-black-18dp.svg" alt="chmurka - chmurka" class="center">
         <p>Ilość waluty:</p>
         <h2>69420</h2>
         <button>Wyloguj</button>
