--- a/logowanie/index.html
+++ b/logowanie/index.html
@@ -21,6 +21,7 @@
                 <a href="http://global.ct8.pl/" target="_blank">Nie masz jeszcze konta? Zarejestruj się!</a>
                 <a href="#" target="_blank">Zapomniałeś hasła? Kliknij tutaj!</a>
         </div>
+        <div id="iks"><div></div></div>
     </div>
 </body>
 
