--- a/logowanie2/index.html
+++ b/logowanie2/index.html
@@ -17,6 +17,7 @@
         <p>Ilość waluty:</p>
         <h2>69420</h2>
         <button>Wyloguj</button>
+        <div id="iks"><div></div></div>
     </div>
 </body>
 
