--- a/logowanie/index.html
+++ b/logowanie/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="container">
-        <img src="chmurcia.png" alt="Chmurka">
+        <img src="./img/chmurcia.png" alt="Chmurka" class="center">
         <div id="logowanie">
             <h1>Logowanie</h1>
                 <form>
