--- a/logowanie/index2.html
+++ b/logowanie/index2.html
@@ -10,10 +10,10 @@
 
 <body>
     <div id="container">
-        <img src="chmurcia.png" alt="Chmurka - pies" class="pies center">
+        <img src="./img/chmurcia.png" alt="Chmurka" class="center">
         <h1 style="display: none;">DLACZEGO WILK TAK WYJE W KSIEZYCOWA NOC</h1>
         <h1>Zalogowano pomyślnie!</h1>
-        <img src="cloud-black-18dp.svg" alt="chmurka - chmurka" class="center">
+        <img src="./img/cloud-black-18dp.svg" alt="chmurka - chmurka" class="center">
         <p>Ilość waluty:</p>
         <h2>69420</h2>
         <button>Wyloguj</button>
